coffeequate/src/grammar.peg
// grammar for PEG.js, which is at http://pegjs.majda.cz/online

{
  var require = function() {};
  var operators = require("operators");
}

start
  = expr

expr
  = left:term "+" right:term { return new operators.Add(left, right); }
  / left:term "-" right:term { return new operators.Add(left, new operators.Mul(right, "-1")); }
  / x:term { return x; }

term
  = l:powerTerm "*" r:powerTerm { return new operators.Mul(l, r); }
  / l:powerTerm "/" r:powerTerm { return new operators.Mul(l, new operators.Pow(r, "-1")); }
  / f:powerTerm { return f; }

powerTerm
  = l:factor "**" r:factor { return new operators.Pow(l, r); }
  / f:factor { return f; }


factor
  = terminal:[^()+\-*/]+ { return stringToTerminal(terminal.join("")); }
  / "(" x:expr ")" { return x; }
  / "-" x:factor { return new operators.Mul(x, "-1") }
