coffeequate/src/parse.js
// Generated by CoffeeScript 1.6.3
(function() {
  var __hasProp = {}.hasOwnProperty,
    __extends = function(child, parent) { for (var key in parent) { if (__hasProp.call(parent, key)) child[key] = parent[key]; } function ctor() { this.constructor = child; } ctor.prototype = parent.prototype; child.prototype = new ctor(); child.__super__ = parent.prototype; return child; };

  define(["require"], function(require) {
    var CONSTANT_FLOAT_REGEX, CONSTANT_INTEGER_REGEX, DIMENSIONS_REGEX, ParseError, SYMBOLIC_CONSTANT_REGEX, VARIABLE_REGEX, parser, stringToTerminal;
    ParseError = (function(_super) {
      __extends(ParseError, _super);

      function ParseError(input, type) {
        this.input = input;
        this.type = type;
      }

      ParseError.prototype.toString = function() {
        return "Could not parse '" + this.input + "' as " + this.type;
      };

      return ParseError;

    })(Error);
    VARIABLE_REGEX = /^@*[a-zA-Z\u0391-\u03A9\u03B1-\u03C9ϕϖϱϰϑϵ][a-zA-Z\u0391-\u03A9\u03B1-\u03C9ϕϖϱϰϑϵ_\-\d]*$/;
    CONSTANT_INTEGER_REGEX = /^-?\d+(e\d+)?$/;
    CONSTANT_FLOAT_REGEX = /^-?\d+(\.\d+)?(e-?\d+(\.\d+)?)?$/;
    SYMBOLIC_CONSTANT_REGEX = /^\\@*[a-zA-Z\u0391-\u03A9\u03B1-\u03C9ϕϖϱϰϑϵ][a-zA-Z\u0391-\u03A9\u03B1-\u03C9ϕϖϱϰϑϵ_\-\d]*$/;
    DIMENSIONS_REGEX = /^[^:]*::\{[^:+]*\}$/;
    stringToTerminal = function(string) {
      var segments, terminal, terminals;
      if (/\^/.test(string)) {
        throw new Error("Unexpected carat (^). Coffeequate uses ** for exponentiation.");
      }
      if (DIMENSIONS_REGEX.test(string)) {
        segments = string.split("::");
        terminal = stringToTerminal(segments[0]);
        terminal.units = parser.parse(segments[1].slice(1, segments[1].length - 1));
        return terminal;
      }
      string = string.trim();
      terminals = require("terminals");
      if (CONSTANT_INTEGER_REGEX.test(string)) {
        return new terminals.Constant(string, 1, "rational");
      } else if (CONSTANT_FLOAT_REGEX.test(string)) {
        return new terminals.Constant(string, 1, "float");
      } else if (VARIABLE_REGEX.test(string)) {
        if (string[0] === "σ") {
          return new terminals.Uncertainty(string.slice(1));
        }
        return new terminals.Variable(string);
      } else if (SYMBOLIC_CONSTANT_REGEX.test(string)) {
        return new terminals.SymbolicConstant(string.slice(1));
      } else {
        throw new ParseError(string, "terminal");
      }
    };
    parser = (function() {
					/*
					 * Generated by PEG.js 0.8.0.
					 *
					 * http://pegjs.majda.cz/
					 */

					function peg$subclass(child, parent) {
						function ctor() { this.constructor = child; }
						ctor.prototype = parent.prototype;
						child.prototype = new ctor();
					}

					function SyntaxError(message, expected, found, offset, line, column) {
						this.message  = message;
						this.expected = expected;
						this.found    = found;
						this.offset   = offset;
						this.line     = line;
						this.column   = column;

						this.name     = "SyntaxError";
					}

					peg$subclass(SyntaxError, Error);

					function parse(input) {
						var options = arguments.length > 1 ? arguments[1] : {},

								peg$FAILED = {},

								peg$startRuleFunctions = { start: peg$parsestart },
								peg$startRuleFunction  = peg$parsestart,

								peg$c0 = peg$FAILED,
								peg$c1 = "+",
								peg$c2 = { type: "literal", value: "+", description: "\"+\"" },
								peg$c3 = function(left, right) { return new operators.Add(left, right); },
								peg$c4 = "-",
								peg$c5 = { type: "literal", value: "-", description: "\"-\"" },
								peg$c6 = function(left, right) { return new operators.Add(left, new operators.Mul(right, "-1")); },
								peg$c7 = function(x) { return x; },
								peg$c8 = "*",
								peg$c9 = { type: "literal", value: "*", description: "\"*\"" },
								peg$c10 = function(l, r) { return new operators.Mul(l, r); },
								peg$c11 = "/",
								peg$c12 = { type: "literal", value: "/", description: "\"/\"" },
								peg$c13 = function(l, r) { return new operators.Mul(l, new operators.Pow(r, "-1")); },
								peg$c14 = function(f) { return f; },
								peg$c15 = "**",
								peg$c16 = { type: "literal", value: "**", description: "\"**\"" },
								peg$c17 = function(l, r) { return new operators.Pow(l, r); },
								peg$c18 = [],
								peg$c19 = /^[^()+\-*\/{}:]/,
								peg$c20 = { type: "class", value: "[^()+\\-*\\/{}:]", description: "[^()+\\-*\\/{}:]" },
								peg$c21 = "::{",
								peg$c22 = { type: "literal", value: "::{", description: "\"::{\"" },
								peg$c23 = /^[^{}]/,
								peg$c24 = { type: "class", value: "[^{}]", description: "[^{}]" },
								peg$c25 = "}",
								peg$c26 = { type: "literal", value: "}", description: "\"}\"" },
								peg$c27 = function(terminal, u) { return stringToTerminal(terminal.join("") + "::{" + u.join("") + "}"); },
								peg$c28 = function(terminal) { return stringToTerminal(terminal.join("")); },
								peg$c29 = "(",
								peg$c30 = { type: "literal", value: "(", description: "\"(\"" },
								peg$c31 = ")",
								peg$c32 = { type: "literal", value: ")", description: "\")\"" },
								peg$c33 = function(x) { return new operators.Mul(x, "-1") },

								peg$currPos          = 0,
								peg$reportedPos      = 0,
								peg$cachedPos        = 0,
								peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
								peg$maxFailPos       = 0,
								peg$maxFailExpected  = [],
								peg$silentFails      = 0,

								peg$result;

						if ("startRule" in options) {
							if (!(options.startRule in peg$startRuleFunctions)) {
								throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
							}

							peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
						}

						function text() {
							return input.substring(peg$reportedPos, peg$currPos);
						}

						function offset() {
							return peg$reportedPos;
						}

						function line() {
							return peg$computePosDetails(peg$reportedPos).line;
						}

						function column() {
							return peg$computePosDetails(peg$reportedPos).column;
						}

						function expected(description) {
							throw peg$buildException(
								null,
								[{ type: "other", description: description }],
								peg$reportedPos
							);
						}

						function error(message) {
							throw peg$buildException(message, null, peg$reportedPos);
						}

						function peg$computePosDetails(pos) {
							function advance(details, startPos, endPos) {
								var p, ch;

								for (p = startPos; p < endPos; p++) {
									ch = input.charAt(p);
									if (ch === "\n") {
										if (!details.seenCR) { details.line++; }
										details.column = 1;
										details.seenCR = false;
									} else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
										details.line++;
										details.column = 1;
										details.seenCR = true;
									} else {
										details.column++;
										details.seenCR = false;
									}
								}
							}

							if (peg$cachedPos !== pos) {
								if (peg$cachedPos > pos) {
									peg$cachedPos = 0;
									peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
								}
								advance(peg$cachedPosDetails, peg$cachedPos, pos);
								peg$cachedPos = pos;
							}

							return peg$cachedPosDetails;
						}

						function peg$fail(expected) {
							if (peg$currPos < peg$maxFailPos) { return; }

							if (peg$currPos > peg$maxFailPos) {
								peg$maxFailPos = peg$currPos;
								peg$maxFailExpected = [];
							}

							peg$maxFailExpected.push(expected);
						}

						function peg$buildException(message, expected, pos) {
							function cleanupExpected(expected) {
								var i = 1;

								expected.sort(function(a, b) {
									if (a.description < b.description) {
										return -1;
									} else if (a.description > b.description) {
										return 1;
									} else {
										return 0;
									}
								});

								while (i < expected.length) {
									if (expected[i - 1] === expected[i]) {
										expected.splice(i, 1);
									} else {
										i++;
									}
								}
							}

							function buildMessage(expected, found) {
								function stringEscape(s) {
									function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

									return s
										.replace(/\\/g,   '\\\\')
										.replace(/"/g,    '\\"')
										.replace(/\x08/g, '\\b')
										.replace(/\t/g,   '\\t')
										.replace(/\n/g,   '\\n')
										.replace(/\f/g,   '\\f')
										.replace(/\r/g,   '\\r')
										.replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
										.replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
										.replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
										.replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
								}

								var expectedDescs = new Array(expected.length),
										expectedDesc, foundDesc, i;

								for (i = 0; i < expected.length; i++) {
									expectedDescs[i] = expected[i].description;
								}

								expectedDesc = expected.length > 1
									? expectedDescs.slice(0, -1).join(", ")
											+ " or "
											+ expectedDescs[expected.length - 1]
									: expectedDescs[0];

								foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

								return "Expected " + expectedDesc + " but " + foundDesc + " found.";
							}

							var posDetails = peg$computePosDetails(pos),
									found      = pos < input.length ? input.charAt(pos) : null;

							if (expected !== null) {
								cleanupExpected(expected);
							}

							return new SyntaxError(
								message !== null ? message : buildMessage(expected, found),
								expected,
								found,
								pos,
								posDetails.line,
								posDetails.column
							);
						}

						function peg$parsestart() {
							var s0;

							s0 = peg$parseexpr();

							return s0;
						}

						function peg$parseexpr() {
							var s0, s1, s2, s3;

							s0 = peg$currPos;
							s1 = peg$parseterm();
							if (s1 !== peg$FAILED) {
								if (input.charCodeAt(peg$currPos) === 43) {
									s2 = peg$c1;
									peg$currPos++;
								} else {
									s2 = peg$FAILED;
									if (peg$silentFails === 0) { peg$fail(peg$c2); }
								}
								if (s2 !== peg$FAILED) {
									s3 = peg$parseexpr();
									if (s3 !== peg$FAILED) {
										peg$reportedPos = s0;
										s1 = peg$c3(s1, s3);
										s0 = s1;
									} else {
										peg$currPos = s0;
										s0 = peg$c0;
									}
								} else {
									peg$currPos = s0;
									s0 = peg$c0;
								}
							} else {
								peg$currPos = s0;
								s0 = peg$c0;
							}
							if (s0 === peg$FAILED) {
								s0 = peg$currPos;
								s1 = peg$parseterm();
								if (s1 !== peg$FAILED) {
									if (input.charCodeAt(peg$currPos) === 45) {
										s2 = peg$c4;
										peg$currPos++;
									} else {
										s2 = peg$FAILED;
										if (peg$silentFails === 0) { peg$fail(peg$c5); }
									}
									if (s2 !== peg$FAILED) {
										s3 = peg$parseexpr();
										if (s3 !== peg$FAILED) {
											peg$reportedPos = s0;
											s1 = peg$c6(s1, s3);
											s0 = s1;
										} else {
											peg$currPos = s0;
											s0 = peg$c0;
										}
									} else {
										peg$currPos = s0;
										s0 = peg$c0;
									}
								} else {
									peg$currPos = s0;
									s0 = peg$c0;
								}
								if (s0 === peg$FAILED) {
									s0 = peg$currPos;
									s1 = peg$parseterm();
									if (s1 !== peg$FAILED) {
										peg$reportedPos = s0;
										s1 = peg$c7(s1);
									}
									s0 = s1;
								}
							}

							return s0;
						}

						function peg$parseterm() {
							var s0, s1, s2, s3;

							s0 = peg$currPos;
							s1 = peg$parsepowerTerm();
							if (s1 !== peg$FAILED) {
								if (input.charCodeAt(peg$currPos) === 42) {
									s2 = peg$c8;
									peg$currPos++;
								} else {
									s2 = peg$FAILED;
									if (peg$silentFails === 0) { peg$fail(peg$c9); }
								}
								if (s2 !== peg$FAILED) {
									s3 = peg$parseterm();
									if (s3 !== peg$FAILED) {
										peg$reportedPos = s0;
										s1 = peg$c10(s1, s3);
										s0 = s1;
									} else {
										peg$currPos = s0;
										s0 = peg$c0;
									}
								} else {
									peg$currPos = s0;
									s0 = peg$c0;
								}
							} else {
								peg$currPos = s0;
								s0 = peg$c0;
							}
							if (s0 === peg$FAILED) {
								s0 = peg$currPos;
								s1 = peg$parsepowerTerm();
								if (s1 !== peg$FAILED) {
									if (input.charCodeAt(peg$currPos) === 47) {
										s2 = peg$c11;
										peg$currPos++;
									} else {
										s2 = peg$FAILED;
										if (peg$silentFails === 0) { peg$fail(peg$c12); }
									}
									if (s2 !== peg$FAILED) {
										s3 = peg$parseterm();
										if (s3 !== peg$FAILED) {
											peg$reportedPos = s0;
											s1 = peg$c13(s1, s3);
											s0 = s1;
										} else {
											peg$currPos = s0;
											s0 = peg$c0;
										}
									} else {
										peg$currPos = s0;
										s0 = peg$c0;
									}
								} else {
									peg$currPos = s0;
									s0 = peg$c0;
								}
								if (s0 === peg$FAILED) {
									s0 = peg$currPos;
									s1 = peg$parsepowerTerm();
									if (s1 !== peg$FAILED) {
										peg$reportedPos = s0;
										s1 = peg$c14(s1);
									}
									s0 = s1;
								}
							}

							return s0;
						}

						function peg$parsepowerTerm() {
							var s0, s1, s2, s3;

							s0 = peg$currPos;
							s1 = peg$parsefactor();
							if (s1 !== peg$FAILED) {
								if (input.substr(peg$currPos, 2) === peg$c15) {
									s2 = peg$c15;
									peg$currPos += 2;
								} else {
									s2 = peg$FAILED;
									if (peg$silentFails === 0) { peg$fail(peg$c16); }
								}
								if (s2 !== peg$FAILED) {
									s3 = peg$parsefactor();
									if (s3 !== peg$FAILED) {
										peg$reportedPos = s0;
										s1 = peg$c17(s1, s3);
										s0 = s1;
									} else {
										peg$currPos = s0;
										s0 = peg$c0;
									}
								} else {
									peg$currPos = s0;
									s0 = peg$c0;
								}
							} else {
								peg$currPos = s0;
								s0 = peg$c0;
							}
							if (s0 === peg$FAILED) {
								s0 = peg$currPos;
								s1 = peg$parsefactor();
								if (s1 !== peg$FAILED) {
									peg$reportedPos = s0;
									s1 = peg$c14(s1);
								}
								s0 = s1;
							}

							return s0;
						}

						function peg$parsefactor() {
							var s0, s1, s2, s3, s4;

							s0 = peg$currPos;
							s1 = [];
							if (peg$c19.test(input.charAt(peg$currPos))) {
								s2 = input.charAt(peg$currPos);
								peg$currPos++;
							} else {
								s2 = peg$FAILED;
								if (peg$silentFails === 0) { peg$fail(peg$c20); }
							}
							if (s2 !== peg$FAILED) {
								while (s2 !== peg$FAILED) {
									s1.push(s2);
									if (peg$c19.test(input.charAt(peg$currPos))) {
										s2 = input.charAt(peg$currPos);
										peg$currPos++;
									} else {
										s2 = peg$FAILED;
										if (peg$silentFails === 0) { peg$fail(peg$c20); }
									}
								}
							} else {
								s1 = peg$c0;
							}
							if (s1 !== peg$FAILED) {
								if (input.substr(peg$currPos, 3) === peg$c21) {
									s2 = peg$c21;
									peg$currPos += 3;
								} else {
									s2 = peg$FAILED;
									if (peg$silentFails === 0) { peg$fail(peg$c22); }
								}
								if (s2 !== peg$FAILED) {
									s3 = [];
									if (peg$c23.test(input.charAt(peg$currPos))) {
										s4 = input.charAt(peg$currPos);
										peg$currPos++;
									} else {
										s4 = peg$FAILED;
										if (peg$silentFails === 0) { peg$fail(peg$c24); }
									}
									if (s4 !== peg$FAILED) {
										while (s4 !== peg$FAILED) {
											s3.push(s4);
											if (peg$c23.test(input.charAt(peg$currPos))) {
												s4 = input.charAt(peg$currPos);
												peg$currPos++;
											} else {
												s4 = peg$FAILED;
												if (peg$silentFails === 0) { peg$fail(peg$c24); }
											}
										}
									} else {
										s3 = peg$c0;
									}
									if (s3 !== peg$FAILED) {
										if (input.charCodeAt(peg$currPos) === 125) {
											s4 = peg$c25;
											peg$currPos++;
										} else {
											s4 = peg$FAILED;
											if (peg$silentFails === 0) { peg$fail(peg$c26); }
										}
										if (s4 !== peg$FAILED) {
											peg$reportedPos = s0;
											s1 = peg$c27(s1, s3);
											s0 = s1;
										} else {
											peg$currPos = s0;
											s0 = peg$c0;
										}
									} else {
										peg$currPos = s0;
										s0 = peg$c0;
									}
								} else {
									peg$currPos = s0;
									s0 = peg$c0;
								}
							} else {
								peg$currPos = s0;
								s0 = peg$c0;
							}
							if (s0 === peg$FAILED) {
								s0 = peg$currPos;
								s1 = [];
								if (peg$c19.test(input.charAt(peg$currPos))) {
									s2 = input.charAt(peg$currPos);
									peg$currPos++;
								} else {
									s2 = peg$FAILED;
									if (peg$silentFails === 0) { peg$fail(peg$c20); }
								}
								if (s2 !== peg$FAILED) {
									while (s2 !== peg$FAILED) {
										s1.push(s2);
										if (peg$c19.test(input.charAt(peg$currPos))) {
											s2 = input.charAt(peg$currPos);
											peg$currPos++;
										} else {
											s2 = peg$FAILED;
											if (peg$silentFails === 0) { peg$fail(peg$c20); }
										}
									}
								} else {
									s1 = peg$c0;
								}
								if (s1 !== peg$FAILED) {
									peg$reportedPos = s0;
									s1 = peg$c28(s1);
								}
								s0 = s1;
								if (s0 === peg$FAILED) {
									s0 = peg$currPos;
									if (input.charCodeAt(peg$currPos) === 40) {
										s1 = peg$c29;
										peg$currPos++;
									} else {
										s1 = peg$FAILED;
										if (peg$silentFails === 0) { peg$fail(peg$c30); }
									}
									if (s1 !== peg$FAILED) {
										s2 = peg$parseexpr();
										if (s2 !== peg$FAILED) {
											if (input.charCodeAt(peg$currPos) === 41) {
												s3 = peg$c31;
												peg$currPos++;
											} else {
												s3 = peg$FAILED;
												if (peg$silentFails === 0) { peg$fail(peg$c32); }
											}
											if (s3 !== peg$FAILED) {
												peg$reportedPos = s0;
												s1 = peg$c7(s2);
												s0 = s1;
											} else {
												peg$currPos = s0;
												s0 = peg$c0;
											}
										} else {
											peg$currPos = s0;
											s0 = peg$c0;
										}
									} else {
										peg$currPos = s0;
										s0 = peg$c0;
									}
									if (s0 === peg$FAILED) {
										s0 = peg$currPos;
										if (input.charCodeAt(peg$currPos) === 45) {
											s1 = peg$c4;
											peg$currPos++;
										} else {
											s1 = peg$FAILED;
											if (peg$silentFails === 0) { peg$fail(peg$c5); }
										}
										if (s1 !== peg$FAILED) {
											s2 = peg$parsefactor();
											if (s2 !== peg$FAILED) {
												peg$reportedPos = s0;
												s1 = peg$c33(s2);
												s0 = s1;
											} else {
												peg$currPos = s0;
												s0 = peg$c0;
											}
										} else {
											peg$currPos = s0;
											s0 = peg$c0;
										}
									}
								}
							}

							return s0;
						}


						// These dummy definitions make it easier to test

						operators = require("operators");

						peg$result = peg$startRuleFunction();

						if (peg$result !== peg$FAILED && peg$currPos === input.length) {
							return peg$result;
						} else {
							if (peg$result !== peg$FAILED && peg$currPos < input.length) {
								peg$fail({ type: "end", description: "end of input" });
							}

							throw peg$buildException(null, peg$maxFailExpected, peg$maxFailPos);
						}
					}

					return {
						SyntaxError: SyntaxError,
						parse:       parse
					};
				})();
    return {
      ParseError: ParseError,
      SyntaxError: parser.SyntaxError,
      stringToExpression: function(string, simplify) {
        var expr;
        if (simplify == null) {
          simplify = true;
        }
        expr = parser.parse(string);
        if (simplify) {
          return expr.simplify();
        }
        return expr;
      },
      stringToTerminal: stringToTerminal
    };
  });

}).call(this);
